--- a/src/UserInput.module.css
+++ b/src/UserInput.module.css
@@ -3,12 +3,15 @@
     margin: 40px;
     border-radius: 10px;
     padding: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .form {
     display: flex;
     flex-direction: column;
     font-weight: bold;
+    
 
 }
 
