--- a/src/UserInput.module.css
+++ b/src/UserInput.module.css
@@ -1,8 +1,8 @@
 .overall{
     background-color: white;
-    margin: 40px;
+    margin: 40px 0px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: center;
 }
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     font-weight: bold;
+    width: 95%;
     
 
 }
@@ -21,13 +22,13 @@ label {
 }
 
 input {
-    width: 400px;
+    width: 100%
 }
 
 button {
     margin-top: 10px;
-    width:100px;
-    padding: 4px;
+    width:15%;
+    padding: 4px 0px;
     color: white;
     background-color: purple;
     border: 0px;
