--- a/src/UserOutput.module.css
+++ b/src/UserOutput.module.css
@@ -4,3 +4,13 @@
     border-radius: 10px;
     padding: 20px;
 }
+
+.output {
+    display: flex;
+    border: 1px solid gray;
+    margin: 5px;
+}
+
+.user{
+    padding: 0px 5px;
+}
